# kolega-skills

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: validate.yml
scripts/: new_skill.py  package_skill.py  validate_skills.py
skills/bug-fix-loop/: SKILL.md
skills/deep-research/: SKILL.md
skills/deep-research/references/: evidence-and-reporting.md  gigacode-workflow.md
skills/deep-research/scripts/: deep-research.workflow  materialize_report.py
skills/docx/: SKILL.md  requirements.in  requirements.txt
skills/docx/references/: examples.md  limitations.md  operations.md  provenance.md  quality.md
skills/docx/scripts/: docx_tool.py  smoke_test.py
skills/new-code-loop/: SKILL.md
skills/pdf/: SKILL.md  requirements-ocr-paddle.in  requirements-ocr-paddle.txt  requirements-ocr-surya.in  requirements-ocr-surya.txt  requirements.in  requirements.txt
skills/pdf/references/: examples.md  limitations.md  ocr.md  operations.md  provenance.md  quality.md  redaction.md
skills/pdf/scripts/: pdf_tool.py  smoke_test.py
skills/pptx/: LICENSE  SKILL.md  requirements.in  requirements.txt
skills/pptx/references/: examples.md  limitations.md  operations.md  provenance.md
skills/pptx/scripts/: pptx_tool.py  smoke_test.py
skills/review/: SKILL.md
skills/skill-authoring/: SKILL.md
skills/xlsx/: SKILL.md  requirements.in  requirements.txt
template/: SKILL.md
tests/: __init__.py  test_deep_research.py  test_new_skill.py  test_package_skill.py  test_validate_skills.py
(+9 files in other folders)
