[project]
name = "kolega-skills-tooling"
version = "0.1.0"
description = "Repository tooling for validating and packaging Kolega Agent Skills"
requires-python = ">=3.11"
dependencies = [
  "markdown-it-py>=3.0.0,<5.0.0",
  "pyyaml>=6.0.2,<7.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.12,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
